--- a/sample/SLU00 - LU Tutorial/Learning notebook.ipynb
+++ b/sample/SLU00 - LU Tutorial/Learning notebook.ipynb
@@ -60,7 +60,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/catarinasilva/.pyenv/versions/3.7.8/envs/sample-ldsa/lib/python3.7/site-packages/pandas/compat/__init__.py:120: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
@@ -309,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('slu00')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -323,12 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "339eccdd14f7629c1550914cdd40c777fe39f8e0e8bf919c6c827dc1e7090c60"
-   }
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
