--- a/sample/SLU00 - LU Tutorial/Exercise notebook.ipynb
+++ b/sample/SLU00 - LU Tutorial/Exercise notebook.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -211,10 +211,10 @@
     "# Create a list of numbers in a particular order\n",
     "\n",
     "# Create a list of integers 0-5 inclusive and assign it to the variable \"numbers\"\n",
-    "# numbers = ...\n",
+    "numbers = [num for num in range(0, 6)]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -297,15 +297,15 @@
     "\n",
     "# Create a list of integers 0-5 inclusive, reverse the order of the list, and assign\n",
     "# the result to a variable called numbers_reversed\n",
-    "# numbers_reversed = ...\n",
+    "numbers_reversed = [num for num in range(5, -1, -1)]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
