--- a/S01 - Bootcamp and Binary Classification/SLU05 - Covariance and Correlation/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU05 - Covariance and Correlation/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d67d44ab",
    "metadata": {
     "deletable": false,
@@ -85,10 +85,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dd076463",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>distance</th>\n",
+       "      <th>consume</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>temp_outside</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>112.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>129.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>185.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   distance  consume  speed  temp_outside\n",
+       "0      28.0      5.0     26          12.0\n",
+       "1      12.0     42.0     30          13.0\n",
+       "2     112.0     55.0     38          15.0\n",
+       "3     129.0     39.0     36          14.0\n",
+       "4     185.0     45.0     46          15.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "carride = pd.read_csv('data/carride2.csv')\n",
     "carride.head()"
@@ -119,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "55b5e28b",
    "metadata": {
     "deletable": false,
@@ -140,14 +221,19 @@
     "    # spearman_corr = ...\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    covariance = consume.cov(speed)\n",
+    "    pearson_corr = consume.corr(speed, method='pearson')\n",
+    "    spearman_corr = consume.corr(speed, method='spearman')\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return covariance, pearson_corr, spearman_corr\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0c808a2f",
    "metadata": {
     "deletable": false,
@@ -162,7 +248,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well done! Everything seems in order! The correlation does not seem very significant.\n"
+     ]
+    }
+   ],
    "source": [
     "consume, speed = get_distance_speed()\n",
     "assert math.isclose(check_if_related(consume, speed)[0], -25.061536002557347, abs_tol=0.01), \"The covariance seems to be wrong.\"\n",
@@ -840,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
