--- a/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "12fd71c2",
    "metadata": {
     "deletable": false,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e073e7ea",
    "metadata": {
     "deletable": false,
@@ -152,14 +152,14 @@
    "source": [
     "# use pandas to load the data into the df_crset dataframe\n",
     "# df_crset = ... \n",
-    "\n",
+    "df_crset = pd.read_csv(\"data/crset_hotel_bookings.csv\", sep=\";\")\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1d4ae9f8",
    "metadata": {
     "deletable": false,
@@ -174,7 +174,169 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hotel</th>\n",
+       "      <th>is_canceled</th>\n",
+       "      <th>lead_time</th>\n",
+       "      <th>arrival_date</th>\n",
+       "      <th>stays_in_weekend_nights</th>\n",
+       "      <th>stays_in_week_nights</th>\n",
+       "      <th>adults</th>\n",
+       "      <th>is_repeated_guest</th>\n",
+       "      <th>previous_cancelations</th>\n",
+       "      <th>agent</th>\n",
+       "      <th>adr</th>\n",
+       "      <th>total_of_special_requests</th>\n",
+       "      <th>reservation_status</th>\n",
+       "      <th>reservation_status_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>342</td>\n",
+       "      <td>July 1 2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>01/07/2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>737</td>\n",
+       "      <td>July 1 2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>01/07/2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>July 1 2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>02/07/2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>July 1 2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>02/07/2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Resort Hotel</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>July 1 2015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Check-Out</td>\n",
+       "      <td>03/07/2015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          hotel  is_canceled  lead_time arrival_date  stays_in_weekend_nights  \\\n",
+       "0  Resort Hotel            0        342  July 1 2015                        0   \n",
+       "1  Resort Hotel            0        737  July 1 2015                        0   \n",
+       "2  Resort Hotel            0          7  July 1 2015                        0   \n",
+       "3  Resort Hotel            0         13  July 1 2015                        0   \n",
+       "4  Resort Hotel            0         14  July 1 2015                        0   \n",
+       "\n",
+       "   stays_in_week_nights  adults  is_repeated_guest  previous_cancelations  \\\n",
+       "0                     0       2                  0                      0   \n",
+       "1                     0       2                  0                      0   \n",
+       "2                     1       1                  0                      0   \n",
+       "3                     1       1                  0                      0   \n",
+       "4                     2       2                  0                      0   \n",
+       "\n",
+       "   agent   adr  total_of_special_requests reservation_status  \\\n",
+       "0    NaN   0.0                          0          Check-Out   \n",
+       "1    NaN   0.0                          0          Check-Out   \n",
+       "2    NaN  75.0                          0          Check-Out   \n",
+       "3  304.0  75.0                          0          Check-Out   \n",
+       "4  240.0  98.0                          1          Check-Out   \n",
+       "\n",
+       "  reservation_status_date  \n",
+       "0              01/07/2015  \n",
+       "1              01/07/2015  \n",
+       "2              02/07/2015  \n",
+       "3              02/07/2015  \n",
+       "4              03/07/2015  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "assert isinstance(df_crset, pd.DataFrame), \"df_crset should be a dataframe\"\n",
     "assert df_crset.shape == (119390, 14), \"The shape of the dataframe is different then expected. Are you using the right separator?\"\n",
@@ -204,6 +366,191 @@
     "Create a function called `format_arrival_date()` that extracts the day, month, and year values from this column and stores this information in new columns `arrival_date_month`, `arrival_date_day` and `arrival_date_year`. All values should be integers. Remove the  `arrival_data` column and return the cleaned dataframe. \n",
     "\n",
     "You can use the `calendar.month_name` function from the [calendar python module](https://docs.python.org/3/library/calendar.html#module-calendar) and pandas `map()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dadeb849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, ''),\n",
+       " (1, 'January'),\n",
+       " (2, 'February'),\n",
+       " (3, 'March'),\n",
+       " (4, 'April'),\n",
+       " (5, 'May'),\n",
+       " (6, 'June'),\n",
+       " (7, 'July'),\n",
+       " (8, 'August'),\n",
+       " (9, 'September'),\n",
+       " (10, 'October'),\n",
+       " (11, 'November'),\n",
+       " (12, 'December')]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[month for month in enumerate(calendar.month_name)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0407fbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = (\n",
+    "    df_crset.arrival_date\n",
+    "    .str.split(pat=' ', expand=True)\n",
+    "    .rename(\n",
+    "        columns=\n",
+    "        {\n",
+    "            0:\"arrival_date_month\", \n",
+    "            1:\"arrival_date_day\", \n",
+    "            2:\"arrival_date_year\"\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4a4c8794",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>arrival_date_month</th>\n",
+       "      <th>arrival_date_day</th>\n",
+       "      <th>arrival_date_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>July</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>July</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>July</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>July</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>July</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119385</th>\n",
+       "      <td>August</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119386</th>\n",
+       "      <td>August</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119387</th>\n",
+       "      <td>August</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119388</th>\n",
+       "      <td>August</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119389</th>\n",
+       "      <td>August</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119390 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       arrival_date_month arrival_date_day arrival_date_year\n",
+       "0                    July                1              2015\n",
+       "1                    July                1              2015\n",
+       "2                    July                1              2015\n",
+       "3                    July                1              2015\n",
+       "4                    July                1              2015\n",
+       "...                   ...              ...               ...\n",
+       "119385             August               30              2017\n",
+       "119386             August               31              2017\n",
+       "119387             August               31              2017\n",
+       "119388             August               31              2017\n",
+       "119389             August               29              2017\n",
+       "\n",
+       "[119390 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -1297,7 +1644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
