--- a/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -101,7 +101,8 @@
     "    #return the Gini impurity\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return 1-p**2-((1-p)**2)\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    \n",
     "data = make_data()"
@@ -823,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
