--- a/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e073e7ea",
    "metadata": {
     "deletable": false,
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1d4ae9f8",
    "metadata": {
     "deletable": false,
@@ -332,7 +332,7 @@
        "4              03/07/2015  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,192 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "dadeb849",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, ''),\n",
-       " (1, 'January'),\n",
-       " (2, 'February'),\n",
-       " (3, 'March'),\n",
-       " (4, 'April'),\n",
-       " (5, 'May'),\n",
-       " (6, 'June'),\n",
-       " (7, 'July'),\n",
-       " (8, 'August'),\n",
-       " (9, 'September'),\n",
-       " (10, 'October'),\n",
-       " (11, 'November'),\n",
-       " (12, 'December')]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[month for month in enumerate(calendar.month_name)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0407fbcf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = (\n",
-    "    df_crset.arrival_date\n",
-    "    .str.split(pat=' ', expand=True)\n",
-    "    .rename(\n",
-    "        columns=\n",
-    "        {\n",
-    "            0:\"arrival_date_month\", \n",
-    "            1:\"arrival_date_day\", \n",
-    "            2:\"arrival_date_year\"\n",
-    "        }\n",
-    "    )\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "4a4c8794",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>arrival_date_month</th>\n",
-       "      <th>arrival_date_day</th>\n",
-       "      <th>arrival_date_year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>July</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119385</th>\n",
-       "      <td>August</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119386</th>\n",
-       "      <td>August</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119387</th>\n",
-       "      <td>August</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119388</th>\n",
-       "      <td>August</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119389</th>\n",
-       "      <td>August</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2017</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>119390 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       arrival_date_month arrival_date_day arrival_date_year\n",
-       "0                    July                1              2015\n",
-       "1                    July                1              2015\n",
-       "2                    July                1              2015\n",
-       "3                    July                1              2015\n",
-       "4                    July                1              2015\n",
-       "...                   ...              ...               ...\n",
-       "119385             August               30              2017\n",
-       "119386             August               31              2017\n",
-       "119387             August               31              2017\n",
-       "119388             August               31              2017\n",
-       "119389             August               29              2017\n",
-       "\n",
-       "[119390 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "8c0c9ecc",
    "metadata": {
     "deletable": false,
@@ -576,12 +391,17 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    month_str2num_maps = {month:index for index, month in enumerate(calendar.month_name)}\n",
+    "    df[[\"arrival_date_month\", \"arrival_date_day\", \"arrival_date_year\"]] = df.arrival_date.str.split(pat=' ', expand=True).astype({1: int, 2: int})\n",
+    "    df = df.drop(columns='arrival_date')\n",
+    "    df[\"arrival_date_month\"] = df[\"arrival_date_month\"].map(month_str2num_maps).astype(int)\n",
+    "    # raise NotImplementedError()\n",
+    "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "22a496df",
    "metadata": {
     "deletable": false,
