--- a/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "8c0c9ecc",
    "metadata": {
     "deletable": false,
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "22a496df",
    "metadata": {
     "deletable": false,
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6ec4b219",
    "metadata": {
     "deletable": false,
@@ -479,12 +479,20 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    df[\"arrival_date_week_number\"] = (df[[\"arrival_date_month\", \"arrival_date_day\", \"arrival_date_year\"]]\n",
+    "        .apply(\n",
+    "            lambda df_row: datetime.date(df_row[\"arrival_date_year\"], df_row[\"arrival_date_month\"], df_row[\"arrival_date_day\"]).isocalendar()[1],\n",
+    "            axis=1\n",
+    "            )\n",
+    "        .astype(int)\n",
+    "        )\n",
+    "    return df\n",
+    "    # raise NotImplementedError()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4c7b45ef",
    "metadata": {
     "deletable": false,
@@ -534,7 +542,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "d234e24b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119385</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119386</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119387</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119388</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119389</th>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119390 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0  1     2\n",
+       "0       1  7  2015\n",
+       "1       1  7  2015\n",
+       "2       2  7  2015\n",
+       "3       2  7  2015\n",
+       "4       3  7  2015\n",
+       "...    .. ..   ...\n",
+       "119385  6  9  2017\n",
+       "119386  7  9  2017\n",
+       "119387  7  9  2017\n",
+       "119388  7  9  2017\n",
+       "119389  7  9  2017\n",
+       "\n",
+       "[119390 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_arrival_week_of_year.reservation_status_date.str.split(pat='/', expand=True).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "0c8251ce",
    "metadata": {
     "deletable": false,
@@ -555,12 +693,23 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    month_str2num_maps = {month:index for index, month in enumerate(calendar.month_name)}\n",
+    "    df[[\"reservation_status_date_day\", \"reservation_status_date_month\", \"reservation_status_date_year\"]] = df.reservation_status_date.str.split(pat='/', expand=True).astype(int)\n",
+    "    df = df.drop(columns='reservation_status_date')\n",
+    "    df[\"reservation_status_date_week_number\"] = (df[[\"reservation_status_date_month\", \"reservation_status_date_day\", \"reservation_status_date_year\"]]\n",
+    "        .apply(\n",
+    "            lambda df_row: datetime.date(df_row[\"reservation_status_date_year\"], df_row[\"reservation_status_date_month\"], df_row[\"reservation_status_date_day\"]).isocalendar()[1],\n",
+    "            axis=1\n",
+    "            )\n",
+    "        .astype(int)\n",
+    "        )\n",
+    "    return df\n",
+    "    # raise NotImplementedError()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "10a9da7f",
    "metadata": {
     "deletable": false,
@@ -618,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8cb40a1c",
    "metadata": {
     "deletable": false,
@@ -632,7 +781,38 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hotel                                      0\n",
+       "is_canceled                                0\n",
+       "lead_time                                  0\n",
+       "stays_in_weekend_nights                    0\n",
+       "stays_in_week_nights                       0\n",
+       "adults                                     0\n",
+       "is_repeated_guest                          0\n",
+       "previous_cancelations                      0\n",
+       "agent                                  16340\n",
+       "adr                                        0\n",
+       "total_of_special_requests                  0\n",
+       "reservation_status                         0\n",
+       "arrival_date_month                         0\n",
+       "arrival_date_day                           0\n",
+       "arrival_date_year                          0\n",
+       "arrival_date_week_number                   0\n",
+       "reservation_status_date_day                0\n",
+       "reservation_status_date_month              0\n",
+       "reservation_status_date_year               0\n",
+       "reservation_status_date_week_number        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.sum(clean_status_date.isnull())"
    ]
@@ -662,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "207e2f67",
    "metadata": {
     "deletable": false,
@@ -683,12 +863,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "    df[\"agent\"] = df[\"agent\"].fillna('unknown')\n",
+    "    return df\n",
+    "    # raise NotImplementedError()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "741ba7af",
    "metadata": {
     "deletable": false,
@@ -735,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "06e2c0d0",
    "metadata": {
     "deletable": false,
@@ -756,13 +938,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    return df.drop_duplicates()\n",
+    "    # raise NotImplementedError()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "22a0142c",
    "metadata": {
     "deletable": false,
@@ -865,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "28dd3487",
    "metadata": {
     "deletable": false,
@@ -879,7 +1062,214 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iso2</th>\n",
+       "      <th>year</th>\n",
+       "      <th>new_sp</th>\n",
+       "      <th>new_sp_m04</th>\n",
+       "      <th>new_sp_m514</th>\n",
+       "      <th>new_sp_m014</th>\n",
+       "      <th>new_sp_m1524</th>\n",
+       "      <th>new_sp_m2534</th>\n",
+       "      <th>new_sp_m3544</th>\n",
+       "      <th>new_sp_m4554</th>\n",
+       "      <th>...</th>\n",
+       "      <th>new_sp_f04</th>\n",
+       "      <th>new_sp_f514</th>\n",
+       "      <th>new_sp_f014</th>\n",
+       "      <th>new_sp_f1524</th>\n",
+       "      <th>new_sp_f2534</th>\n",
+       "      <th>new_sp_f3544</th>\n",
+       "      <th>new_sp_f4554</th>\n",
+       "      <th>new_sp_f5564</th>\n",
+       "      <th>new_sp_f65</th>\n",
+       "      <th>new_sp_fu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  iso2  year  new_sp  new_sp_m04  new_sp_m514  new_sp_m014  new_sp_m1524  \\\n",
+       "0   AD  1989     NaN         NaN          NaN          NaN           NaN   \n",
+       "1   AD  1990     NaN         NaN          NaN          NaN           NaN   \n",
+       "2   AD  1991     NaN         NaN          NaN          NaN           NaN   \n",
+       "3   AD  1992     NaN         NaN          NaN          NaN           NaN   \n",
+       "4   AD  1993    15.0         NaN          NaN          NaN           NaN   \n",
+       "\n",
+       "   new_sp_m2534  new_sp_m3544  new_sp_m4554  ...  new_sp_f04  new_sp_f514  \\\n",
+       "0           NaN           NaN           NaN  ...         NaN          NaN   \n",
+       "1           NaN           NaN           NaN  ...         NaN          NaN   \n",
+       "2           NaN           NaN           NaN  ...         NaN          NaN   \n",
+       "3           NaN           NaN           NaN  ...         NaN          NaN   \n",
+       "4           NaN           NaN           NaN  ...         NaN          NaN   \n",
+       "\n",
+       "   new_sp_f014  new_sp_f1524  new_sp_f2534  new_sp_f3544  new_sp_f4554  \\\n",
+       "0          NaN           NaN           NaN           NaN           NaN   \n",
+       "1          NaN           NaN           NaN           NaN           NaN   \n",
+       "2          NaN           NaN           NaN           NaN           NaN   \n",
+       "3          NaN           NaN           NaN           NaN           NaN   \n",
+       "4          NaN           NaN           NaN           NaN           NaN   \n",
+       "\n",
+       "   new_sp_f5564  new_sp_f65  new_sp_fu  \n",
+       "0           NaN         NaN        NaN  \n",
+       "1           NaN         NaN        NaN  \n",
+       "2           NaN         NaN        NaN  \n",
+       "3           NaN         NaN        NaN  \n",
+       "4           NaN         NaN        NaN  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_tb_who = pd.read_csv(os.path.join('data', 'tb.csv'), sep=',')\n",
     "df_tb_who.head()"
@@ -1450,7 +1840,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('slu00')",
    "language": "python",
    "name": "python3"
   },
@@ -1465,6 +1855,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "339eccdd14f7629c1550914cdd40c777fe39f8e0e8bf919c6c827dc1e7090c60"
+   }
   }
  },
  "nbformat": 4,
